# oqtopus-device-monitoring

./: GETTING_STARTED.md  README.md
.github/scripts/: ecc_converter.py
.github/workflows/: actionlint.yaml  editorconfig-review.yaml  python-ci.yaml
api_server/: .env.example  Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml
api_server/config/: config.yaml  logging.yaml
api_server/src/: api_server.py
api_server/src/common/: background_tasks.py  config.py  logger.py  operations.py  request_validation.py  util.py  victoria_metrics.py
api_server/src/common/types/: config.py  operation.py  victoria_metrics.py
api_server/src/routers/: meta.py  metrics.py
api_server/src/schemas/: __init__.py  error.py  errors.py  meta.py  metrics.py  success.py
api_server/tests/: conftest.py  test_api_server.py
api_server/tests/common/: test_background_tasks.py  test_config.py  test_logger.py  test_operations.py  test_request_validation.py  test_util.py  test_victoria_metrics.py
api_server/tests/routers/: conftest.py  test_meta.py  test_metrics.py
custom_exporters/cryo_metrics_exporter/: .env.example  Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml
custom_exporters/cryo_metrics_exporter/config/: config.yaml  logging.yaml
custom_exporters/cryo_metrics_exporter/src/: cryo_metrics_exporter.py
custom_exporters/cryo_metrics_exporter/tests/: conftest.py  test_collect.py  test_config_and_logging.py  test_custom_collector_init.py  test_data_parsing.py  test_ftp_data_retrieval.py  test_ftp_operations.py  test_http_data_retrieval.py  test_metric_handler.py  test_metrics_collection_helper_methods.py  test_smb_data_retrieval.py  test_smb_operations.py  test_utility_functions.py
custom_exporters/quel1_metrics_exporter/: .coverage-worker  .env.example  Dockerfile  Makefile  README.md  compose.yaml  coverage-worker.xml  pyproject.toml
custom_exporters/quel1_metrics_exporter/config/: config.yaml  logging.yaml
custom_exporters/quel1_metrics_exporter/src/: quel1_metrics_exporter.py
custom_exporters/quel1_metrics_exporter/tests/: test_quel1_metrics_exporter.py
custom_exporters/quel1_se_metrics_exporter/: .env.example  .gitignore  Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml
custom_exporters/quel1_se_metrics_exporter/config/: config.yaml  logging.yaml
custom_exporters/quel1_se_metrics_exporter/src/: quel1_se_metrics_exporter.py
custom_exporters/quel1_se_metrics_exporter/tests/: test_quel1_se_metrics_exporter.py
docs/: system-design.md  vmagent-scaling.md
docs/api-server/: api-server.md
docs/api-server/oas/: Makefile  openapi.yaml  root.yaml
docs/api-server/oas/paths/: api_tsdb.yaml
docs/api-server/oas/schemas/: api_tsdb.yaml  error.yaml  success.yaml
docs/custom-exporters/: cryo-metrics-exporter.md  quel1-metrics-exporter.md  quel1-se-metrics-exporter.md
grafana-and-loki/: .env.example  Makefile  README.md  compose.yaml
grafana-and-loki/grafana/dashboards/: analysis_dashboard.json  cryo_metrics_exporter.json  docker_containers.json  node-exporter-full.json  quel1_metrics_exporter.json
grafana-and-loki/grafana/provisioning/alerting/: alert_resources.yaml  alert_rules.yaml
grafana-and-loki/grafana/provisioning/dashboards/: provider.yml
grafana-and-loki/grafana/provisioning/datasources/: datasource.yml
grafana-and-loki/loki/: loki-config.yaml
node-exporter_and_cAdvisor/: README.md  compose.yaml
victoriametrics-cluster/: .env.example  README.md  compose.yaml
victoriametrics-cluster/vmagent/: prometheus.yml
victoriametrics-cluster/vmauth-insert/: auth.yml
victoriametrics-cluster/vmauth-select/: auth.yml
victoriametrics-cluster/weekly-relabeling-cron/: Dockerfile  relabel_weekly.sh  relabel_weekly.yml
