[project]
name = "cryo_metrics_exporter"
version = "0.1.0"
authors = [
    { name = "oqtopus-team", email = "oqtopus-team@googlegroups.com" },
]
readme = "README.md"
keywords = []
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: Apache Software License",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Physics",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
]
requires-python = ">=3.13"
dependencies = [
  "certifi",
  "urllib3",
  "ipykernel>=6.29.5",
  "mkdocs-gen-files>=0.5.0",
  "mkdocs-glightbox>=0.4.0",
  "mkdocs-jupyter>=0.25.1",
  "mkdocs-literate-nav>=0.6.1",
  "mkdocs-macros-plugin>=1.3.7",
  "mkdocs-material>=9.5.44",
  "mkdocstrings[python]>=0.27.0",
  "mypy>=1.11.2",
  "omegaconf>=2.3.0",
  "pymdown-extensions>=10.12",
  "pytest-cov>=5.0.0",
  "pytest-mock>=3.14.0",
  "pytest>=8.3.4",
  "types-PyYAML>=1.3.0",
  "requests>=2.32.5",
  "ruff>=0.6.8",
  "uv>=0.4.20",
  "prometheus-client>=0.21.0, <1.0",
  "PyYAML>=6.0, <7.0",
  "python-json-logger>=2.0.7, <3.0",
  "smbprotocol>=1.6.0"
]

[dependency-groups]
dev = [
  "mypy>=1.19.0",
  "pytest-cov>=7.0.0",
  "pytest-mock>=3.15.1",
  "pytest>=9.0.2",
  "ruff>=0.14.8",
  "types-requests>=2.32.4",
  "types-PyYAML>=1.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
preview = true
include = [
  "src/**/*.py",
  "tests/**/*.py",
]
lint.select = ["ALL"]
lint.ignore = [
  "COM812",
  "CPY001",
  "D100",
  "D104",
  "D107",
  "D203",
  "D213",
  "ISC001",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
  "ANN201",
  "ANN205",
  "ANN401",
  "CPY001",
  "D",
  "PLC1901",
  "PLR2004",
  "PLR6301",
  "S101",
  "S404",
  "SLF001",
]

[tool.mypy]
files = ["src", "tests"]
exclude = [
  "src/.*/v1/", # Generated codes
]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=xml"
pythonpath = ["src"]
