[project]
name = "quel1_se_metrics_exporter"
version = "0.1.0"
description = "Prometheus metrics exporter for QuEL-1 SE temperature and actuator data"
authors = [
    { name = "oqtopus-team", email = "oqtopus-team@googlegroups.com" },
]
readme = "README.md"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: Apache Software License",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Physics",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
]
requires-python = ">=3.12"
dependencies = [
  "certifi",
  "urllib3",
  "prometheus-client>=0.21.0, <1.0",
  "PyYAML>=6.0, <7.0",
  "python-json-logger>=2.0.7, <3.0",
  "scipy>=1.13.0",
  # Note: quel_ic_config must be installed separately from the QuEL repository
  "quel_ic_config>=0.10.7",
]

[dependency-groups]
dev = [
  "mypy>=1.19.0",
  "pytest-cov>=7.0.0",
  "pytest-mock>=3.15.1",
  "pytest>=9.0.2",
  "ruff>=0.14.8",
  "types-PyYAML>=6.0.12.20240917",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
preview = true
include = [
  "src/*.py",
  "tests/*.py",
]
lint.select = ["ALL"]
lint.ignore = [
  "COM812",
  "CPY001",
  "D100",
  "D104",
  "D107",
  "D203",
  "D213",
  "ISC001",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
  "ANN201",
  "ANN205",
  "ANN401",
  "CPY001",
  "D",
  "PLC1901",
  "PLR2004",
  "PLR6301",
  "S101",
  "S404",
  "ARG002",
]

[tool.mypy]
files = ["src", "tests"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=xml"
pythonpath = ["src"]
